// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`closeIssue closes an issue with an issue number 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "closed",
    },
  ],
]
`;

exports[`closeIssue closes an issue with an issue string 1`] = `
Array [
  Array [
    Object {
      "number": 2,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "closed",
    },
  ],
]
`;

exports[`closeIssue closes the issue from the webhook payload 1`] = `
Array [
  Array [
    Object {
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
      "state": "closed",
    },
  ],
]
`;
